--- a/CS/BlazorApp_SpreadsheetDocumentAPI/BlazorApp_SpreadsheetDocumentAPI.csproj
+++ b/CS/BlazorApp_SpreadsheetDocumentAPI/BlazorApp_SpreadsheetDocumentAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="21.2.5" />
-    <PackageReference Include="DevExpress.Document.Processor" Version="21.2.5" />
+    <PackageReference Include="DevExpress.Blazor" Version="22.1.1" />
+    <PackageReference Include="DevExpress.Document.Processor" Version="22.1.1" />
   </ItemGroup>
 
   <ItemGroup>
